--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : boyDemo
+title : WenSen的博客
 tagline: Site Tagline
 author :
-  name : Lai Lin
+  name :  WenSen
   email : 916708429@qq.com
   github : boyDemo
-  twitter : username
+  twitter : none
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
