--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : WenSen的博客
+title : wensenlai的博客
 tagline: Site Tagline
 author :
-  name :  WenSen
+  name :  wensenlai
   email : 916708429@qq.com
-  github : boyDemo
+  github : wensenlai
   twitter : none
   feedburner : feedname
 
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://boyDemo.github.io
+production_url : http://wensenlai.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
